--- a/.editorconfig
+++ b/.editorconfig
@@ -10,3 +10,7 @@ max_line_length = 80
 [*.{hpp,cpp}]
 indent_style = space
 indent_size = 4
+
+[*.{yaml,yml}]
+indent_style = space
+indent_size = 2
