--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -32,6 +32,7 @@ jobs:
             .clang-format
             **.hpp
             **.cpp
+          sparse-checkout-cone-mode: false
       - name: Lint files
         run: |
           export RANGE="${{ github.base_ref }}..${{ github.head_ref }}"
