ci(build): add missing input to workflow call

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,8 @@ on:
       os:
         required: true
         type: string
+      dependencies:
+        type: string
       configuration-options:
         type: string
       build-options:
