--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,10 @@ on:
         type: string
       dependencies:
         type: string
+      python-version:
+        type: string
+      python-dependencies:
+        type: string
       configuration-options:
         type: string
       build-options:
@@ -38,6 +42,10 @@ on:
         - windows-latest
         - macos-latest
       dependencies:
+        type: string
+      python-version:
+        type: string
+      python-dependencies:
         type: string
       configuration-options:
         type: string
@@ -62,6 +70,14 @@ jobs:
       - name: Install dependencies (macOS)
         if: ${{ runner.os == 'macOS' && inputs.dependencies }}
         run: brew install ${{ inputs.dependencies }}
+      - name: Set up Python
+        if: ${{ inputs.python-version }}
+        uses: actions/setup-python@v6
+        with:
+          python-version: ${{ inputs.python-version }}
+      - name: Install dependencies (Python)
+        if: ${{ inputs.python-version && inputs.python-dependencies }}
+        run: pip install ${{ inputs.python-dependencies }}
       - name: Check out repository
         uses: actions/checkout@v6
       - name: Configure project
