--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,8 +23,6 @@ project(
     LANGUAGES C CXX
 )
 
-install(FILES LICENSE TYPE DOC)
-
 # Executable
 add_executable(
     main
@@ -94,3 +92,30 @@ add_executable(
 )
 
 add_test(NAME main COMMAND test_main)
+
+# Package
+install(FILES LICENSE TYPE DOC)
+install(TARGETS main glad)
+
+if(glfw_FOUND)
+	install(IMPORTED_RUNTIME_ARTIFACTS glfw)
+else()
+	install(TARGETS glfw)
+endif()
+
+set(CPACK_PACKAGE_NAME PROJECT_NAME)
+set(CPACK_PACKAGE_VENDOR "krajcsozalan")
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Template repository for CMake OpenGL projects")
+set(CPACK_PACKAGE_VERSION PROJECT_VERSION)
+set(CPACK_PACKAGE_VERSION_MAJOR PROJECT_VERSION_MAJOR)
+set(CPACK_PACKAGE_VERSION_MINOR PROJECT_VERSION_MINOR)
+set(CPACK_PACKAGE_VERSION_PATCH PROJECT_VERSION_PATCH)
+set(CPACK_PACKAGE_INSTALL_DIRECTORY "CPack Component Example")
+set(CPACK_PACKAGE_EXECUTABLES "main" PROJECT_NAME)
+set(CPACK_CREATE_DESKTOP_LINKS "main")
+set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
+
+set(CPACK_NSIS_PACKAGE_NAME PROJECT_NAME)
+set(CPACK_NSIS_INSTALLED_ICON_NAME "bin/main.exe")
+
+include(CPack)
