ci(build): cache build directory

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,6 +80,12 @@ jobs:
         run: pip install ${{ inputs.python-dependencies }}
       - name: Check out repository
         uses: actions/checkout@v6
+      - name: Cache project
+        uses: actions/cache@v5
+        with:
+          key: Build-${{ runner.os }}-${{ hashFiles('CMakeLists.txt', 'src') }}
+          restore-keys: Build-${{ runner.os }}-
+          path: build
       - name: Configure project
         run: cmake -B build ${{ inputs.configuration-options }}
       - name: Build project
